# agent-engram

./: .gitignore  .hve-tracking.json  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  agent-engram.code-workspace  cpstart.ps1  release.toml  t-mem.code-workspace  test-output.txt  test-results.txt
.backlog/: config.yml  queue.md
.backlog/brainstorm/: 2026-03-27-engram-effectiveness-metrics-requirements.md  2026-03-28-agent-harness-bug-logging-requirements.md  2026-03-28-file-index-verification-requirements.md  2026-03-28-multi-language-tree-sitter-requirements.md  2026-03-28-multi-session-shim-requirements.md  2026-03-28-output-to-file-first-pattern-requirements.md  2026-03-29-harness-resilience-improvements-requirements.md
.backlog/completed/: task-001 - Feature-001-Core-MCP-Daemon.md  task-001.01 - Daemon-Connection-Workspace-Binding.md  task-001.02 - Task-State-Management.md  task-001.03 - Git-Backed-Persistence.md  task-001.04 - Semantic-Memory-Query.md  task-001.05 - Multi-Client-Concurrent-Access.md  task-002 - Feature-002-Enhanced-Task-Management.md  task-002.01 - Priority-Based-Ready-Work-Queue.md  task-002.02 - Task-Priorities-and-Labels.md  task-002.03 - Enhanced-Dependency-Graph.md  task-002.04 - Agent-Driven-Compaction.md  task-002.05 - Task-Claiming-and-Assignment.md  task-002.06 - Issue-Types-and-Task-Classification.md  task-002.07 - DeferSnooze-and-Pinned-Tasks.md  task-002.08 - MCP-Output-Controls-and-Workspace-Statistics.md  task-002.09 - Batch-Operations-and-Comments.md  task-002.10 - Project-Configuration.md  task-003 - Feature-003-Unified-Code-Knowledge-Graph.md  task-003.01 - Code-Structure-Indexing.md  task-003.02 - Graph-Backed-Dependency-Walking.md  task-003.03 - Incremental-Code-Sync.md  task-003.04 - Cross-Region-Task-to-Code-Linking.md  task-003.05 - Unified-Semantic-Search-Across-Regions.md  task-003.06 - Impact-Analysis-Queries.md  task-003.07 - Code-Graph-Persistence.md  task-004 - Feature-004-Refactor-Engram-Server-as-Plugin.md  task-004.01 - Zero-Configuration-Workspace-Memory.md  task-004.02 - Workspace-Isolation-Without-Port-Conflicts.md  task-004.03 - Automatic-Lifecycle-Management.md  task-004.04 - Real-Time-File-System-Awareness.md  task-004.05 - Plugin-Installation-Management.md  task-004.06 - Configurable-Behavior.md  task-005 - Feature-005-Lifecycle-Observability.md  task-005.01 - Dependency-Gated-Task-Execution.md  task-005.02 - Daemon-Performance-Observability.md  task-005.03 - State-Event-Logging-and-Rollback.md  task-005.04 - Sandboxed-Graph-Query-Interface.md  task-005.05 - Hierarchical-Workflow-Groupings.md  task-005.06 - Reliable-Daemon-Availability.md  task-006 - Feature-006-Workspace-Content-Intelligence.md  (+26 more)
.backlog/decisions/: decision-001 - Feature-Gated-Embeddings-with-Keyword-Only-Fallback.md  decision-002 - Static-Flush-Lock-for-Concurrent-Dehydration.md  decision-003 - Sliding-Window-Rate-Limiter-for-SSE-Connections.md  decision-004 - Transitive-Dependency-Audit-Warnings-Accepted.md  decision-005 - Use-cargo-llvm-cov-for-Windows-Coverage.md  decision-006 - Switch-embedding-model-from-all-MiniLM-L6-v2-to-bge-small-en.md  decision-007 - Backtick-Escape-function-Table-Name-in-SurrealDB-v2.md  decision-008 - Application-Level-BFS-for-Graph-Traversal.md  decision-009 - Vector-Search-Fallback-for-mapcode.md  decision-010 - Code-Graph-Performance-Criteria-Validation-T074.md  decision-011 - Deferred-SSE-Progress-Events.md  decision-012 - Deferred-Parallel-File-Parsing.md  decision-013 - Cross-File-Call-Edges-Deferred.md  decision-014 - Deferred-Startup-Smoke-Test.md  decision-015 - Migrate-from-mcp-sdk-to-rmcp-and-Adopt-Workspace-Local-Plugi.md  decision-016 - Feature-gate-HTTPSSE-transport-layer-behind-legacy-sse.md
.backlog/docs/: doc-001 - F001-Research.md  doc-002 - F002-Research.md  doc-003 - F003-Research.md  doc-004 - F004-Research.md  doc-005 - F005-Research.md  doc-006 - F006-Research.md  doc-009 - F009-Harness.md  f010-harness-manifest.md
.backlog/drafts/: draft-001 - Can-the-shim-handle-multiple-concurrent-agent-sessions.md  draft-002 - Need-to-be-able-to-hydrate-requirements-backlog-from-markdown.md  draft-003 - Bring-the-code-graph-into-the-db-branch-version.md  draft-004 - Add-a-feature-to-enable-multiple-code-language-tree-sitters-for-the-code-graph.md
.backlog/milestones/: m-0 - releasable-engram-server-with-installer,-instructi.md
.backlog/plans/: 2026-03-27-engram-effectiveness-metrics-plan.md  2026-03-29-context-management-plan.md  2026-03-29-dynamic-injection-plan.md  2026-03-29-model-routing-plan.md  2026-03-29-observability-evaluation-plan.md  2026-03-29-orchestration-routing-plan.md  2026-03-29-tool-guardrails-plan.md  2026-03-30-observability-evaluation-daemon-plan.md
.backlog/research/: Agent-Harness-Evaluation-Report.md
.backlog/reviews/: 2026-03-27-010-effectiveness-metrics-review.md  2026-03-27-engram-effectiveness-metrics-plan-review.md  2026-03-29-012-harness-pipeline-code-review.md  2026-03-29-model-routing-plan-review.md  2026-03-29-primitives-1-3-4-5-6-plan-review.md  2026-03-29-task-granularity-plan-review.md  2026-03-30-016-policy-evaluation-review.md  2026-03-30-sandbox-observability-plan-review.md
.backlog/tasks/: task-008.01 - Native-Graph-Traversal.md  task-008.02 - Native-Vector-KNN-Search.md  task-008.03 - Hybrid-Graph-Vector-Queries.md  task-008.04 - Embedding-Feature-Flag-Hardening.md  task-008.07 - Re-indexing-fails-with-NaN-error-bug.md  task-008.08 - db-storage-location-incorrect.md  task-008.09 - use-sqldb-filehash-track-changes.md  task-009 - 009-Branch-Aware-Database-Isolation.md  task-010.02 - 010.2-Metrics-Collector-Service.md  (+76 more)
.beads/: .beads-credential-key  metadata.json
.cargo/: config.toml
.context/: backlog.md
.copilot/: command-history-state.json  permissions-config.json  session-store.db-shm  session-store.db-wal
.github/: copilot-instructions.md
docs/: architecture.md  configuration.md  log-observation-guide.md  mcp-tool-reference.md  quickstart.md  troubleshooting.md  xanalysis.md
scripts/: run-local.ps1
specs/: t-mem.v0.spec.md
src/: lib.rs
(+534 files in other folders)
