[workspace]
members = ["."]
resolver = "2"

[package]
name = "engram"
version = "0.0.1"
edition = "2024"
rust-version = "1.85"
description = "Agent Engram MCP daemon"
license = "MIT"
publish = false

authors = ["Engram Contributors"]

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
rmcp = { version = "1.1", features = ["server", "transport-io"] }
interprocess = { version = "2", features = ["tokio"] }
fd-lock = "4"
notify = "9.0.0-rc.2"
notify-debouncer-full = "0.7.0"
surrealdb = { version = "2", features = ["kv-surrealkv"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pulldown-cmark = "0.10"
fastembed = { version = "3", optional = true, default-features = false }
ort-sys = { version = "2.0.0-rc.11", default-features = false, features = ["download-binaries", "tls-native"] }
tracing-opentelemetry = { version = "0.26", optional = true }
opentelemetry = { version = "0.26", optional = true }
opentelemetry_sdk = { version = "0.26", optional = true, features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.26", optional = true, features = ["grpc-tonic"] }
thiserror = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
similar = "2"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
clap = { version = "4", features = ["derive", "env"] }
dirs = "5"
tokio-stream = "0.1"
sha2 = "0.10"
hex = "0.4"
sysinfo = "0.30"
toml = "0.8"
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
ignore = "0.4"
serde_yaml = "0.9"
git2 = { version = "0.19", optional = true, default-features = false }

[features]
default = []
embeddings = ["fastembed", "fastembed/ort-download-binaries", "fastembed/online"]
git-graph = ["git2"]
otlp-export = ["tracing-opentelemetry", "opentelemetry", "opentelemetry_sdk", "opentelemetry-otlp"]
# Enables the legacy HTTP/SSE transport layer (axum router, MCP HTTP handler, SSE handler).
# Not required for normal operation; the daemon uses IPC transport by default.
# See docs/adrs/0016-legacy-sse-feature-gate.md.
legacy-sse = []

[dev-dependencies]
proptest = "1"
tempfile = "3"
tokio-test = "0.4"

[[bin]]
name = "engram"
path = "src/bin/engram.rs"

[[test]]
name = "contract_lifecycle"
path = "tests/contract/lifecycle_test.rs"

[[test]]
name = "contract_read"
path = "tests/contract/read_test.rs"

[[test]]
name = "contract_write"
path = "tests/contract/write_test.rs"

[[test]]
name = "integration_connection"
path = "tests/integration/connection_test.rs"
required-features = ["legacy-sse"]

[[test]]
name = "unit_proptest"
path = "tests/unit/proptest_models.rs"

[[test]]
name = "integration_hydration"
path = "tests/integration/hydration_test.rs"

[[test]]
name = "integration_embedding"
path = "tests/integration/embedding_test.rs"

[[test]]
name = "unit_proptest_serialization"
path = "tests/unit/proptest_serialization.rs"

[[test]]
name = "integration_concurrency"
path = "tests/integration/concurrency_test.rs"
[[test]]
name = "contract_error_codes"
path = "tests/contract/error_codes_test.rs"

[[test]]
name = "integration_benchmark"
path = "tests/integration/benchmark_test.rs"

[[test]]
name = "integration_relevance"
path = "tests/integration/relevance_test.rs"

[[test]]
name = "integration_enhanced_features"
path = "tests/integration/enhanced_features_test.rs"

[[test]]
name = "integration_performance"
path = "tests/integration/performance_test.rs"

[[test]]
name = "unit_parsing"
path = "tests/unit/parsing_test.rs"

[[test]]
name = "integration_code_graph"
path = "tests/integration/code_graph_test.rs"

[[test]]
name = "integration_cross_region"
path = "tests/integration/cross_region_test.rs"

[[test]]
name = "contract_quickstart"
path = "tests/contract/quickstart_test.rs"

[[test]]
name = "contract_ipc_protocol"
path = "tests/contract/ipc_protocol_test.rs"

[[test]]
name = "unit_lockfile"
path = "tests/unit/lockfile_test.rs"

[[test]]
name = "helpers_daemon_harness"
path = "tests/helpers/mod.rs"

[[test]]
name = "contract_shim_lifecycle"
path = "tests/contract/shim_lifecycle_test.rs"

[[test]]
name = "integration_shim_error"
path = "tests/integration/shim_error_test.rs"

[[test]]
name = "integration_multi_workspace"
path = "tests/integration/multi_workspace_test.rs"

[[test]]
name = "integration_file_watcher"
path = "tests/integration/file_watcher_test.rs"

[[test]]
name = "unit_ttl"
path = "tests/unit/ttl_test.rs"

[[test]]
name = "integration_installer"
path = "tests/integration/installer_test.rs"

[[test]]
name = "integration_daemon_lifecycle"
path = "tests/integration/daemon_lifecycle_test.rs"

[[test]]
name = "unit_plugin_config"
path = "tests/unit/plugin_config_test.rs"

[[test]]
name = "integration_config"
path = "tests/integration/config_test.rs"

[[test]]
name = "integration_security"
path = "tests/integration/security_test.rs"

[[test]]
name = "integration_recovery"
path = "tests/integration/recovery_test.rs"

[[test]]
name = "contract_gate"
path = "tests/contract/gate_test.rs"

[[test]]
name = "contract_observability"
path = "tests/contract/observability_test.rs"

[[test]]
name = "contract_event"
path = "tests/contract/event_test.rs"

[[test]]
name = "contract_query"
path = "tests/contract/query_test.rs"

[[test]]
name = "contract_collection"
path = "tests/contract/collection_test.rs"

[[test]]
name = "integration_gate"
path = "tests/integration/gate_integration_test.rs"

[[test]]
name = "integration_rollback"
path = "tests/integration/rollback_test.rs"

[[test]]
name = "integration_reliability"
path = "tests/integration/reliability_test.rs"

[[test]]
name = "unit_proptest_events"
path = "tests/unit/proptest_events.rs"

[[test]]
name = "integration_smoke"
path = "tests/integration/smoke_test.rs"

[[test]]
name = "unit_registry_parse"
path = "tests/unit/registry_parse_test.rs"

[[test]]
name = "unit_proptest_content"
path = "tests/unit/proptest_content.rs"

[[test]]
name = "contract_registry"
path = "tests/contract/registry_test.rs"

[[test]]
name = "integration_registry"
path = "tests/integration/registry_test.rs"

[[test]]
name = "contract_content"
path = "tests/contract/content_test.rs"

[[test]]
name = "integration_ingestion"
path = "tests/integration/ingestion_test.rs"

[[test]]
name = "integration_backlog"
path = "tests/integration/backlog_test.rs"

[[test]]
name = "integration_git_graph"
path = "tests/integration/git_graph_test.rs"
required-features = ["git-graph"]
